# Dinamica-Molecular

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  particle.py
.github/workflows/: build.yml  docs.yml
bibliography/: index.html
c++/: CMakeLists.txt  graphics.cpp  main.cpp  particle.cpp  particle.hpp
c++/data/: main.cpp  particle.cpp
c++/graphical/: graphics.hpp  main.cpp
compilation/: index.html
docs/: bibliography.md  compilation.md  explication.md  index.md  reference.md  references.md  results.md
docs/javascripts/: mathjax.js
explication/: index.html
python/: boltzmann.py  energy_check.py  event_driven_simulation.py  main.py  particle.py  requirements.txt  results_python.csv
python/tests/: test_particle.py
reference/: index.html
results/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/compilation/: index.html
site/explication/: index.html
site/references/: index.html
site/results/: index.html
site/search/: search_index.json
